[gd_scene load_steps=19 format=3 uid="uid://o527kfriwxqc"]

[ext_resource type="Script" path="res://scene/BattleScene2/battle_2.gd" id="1_g2875"]
[ext_resource type="Texture2D" uid="uid://b1xlqdh4plgem" path="res://ImageAssets/background/dungeon.jpg" id="1_jph63"]
[ext_resource type="Texture2D" uid="uid://bumh0nb4pq3gc" path="res://ImageAssets/enemyimageasset/wolfmonster.png" id="2_at004"]
[ext_resource type="Resource" uid="uid://c5bqhagrj1ha1" path="res://scene/BattleScene2/wolf.tres" id="2_uuo0r"]
[ext_resource type="FontFile" uid="uid://btct8ear61d2l" path="res://font/Roboto-VariableFont_wdth,wght.ttf" id="4_shuwr"]
[ext_resource type="StyleBox" uid="uid://dyulyyldthob8" path="res://style/hover.tres" id="7_fjas0"]
[ext_resource type="StyleBox" uid="uid://cydic07iypihn" path="res://style/buttonstylenormal.tres" id="8_pq12x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_26c2o"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3hvhf"]
bg_color = Color(0, 1, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ruyt3"]
bg_color = Color(0, 0, 0, 0.662745)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pcitl"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhg2b"]
bg_color = Color(0, 1, 0, 1)
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_veukv"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i4ikq"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_uqfde"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyBox/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qdd1v"]
resource_name = "wolf"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyBox/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3fwpr"]
_data = {
"RESET": SubResource("Animation_uqfde"),
"wolf": SubResource("Animation_qdd1v")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mq52o"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[node name="Battle2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g2875")
enemy_wolf = ExtResource("2_uuo0r")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 648.0
texture = ExtResource("1_jph63")
expand_mode = 1

[node name="EnemyBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 283.0
offset_top = 102.0
offset_right = -314.0
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="EnemyBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_26c2o")
theme_override_styles/fill = SubResource("StyleBoxFlat_3hvhf")
max_value = 10000.0
step = 1.0
value = 300.0
show_percentage = false

[node name="label" type="Label" parent="EnemyBox/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_shuwr")
text = "HP : 25/50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="EnemyBox"]
layout_mode = 2

[node name="Wolf" type="Sprite2D" parent="EnemyBox/TextureRect"]
position = Vector2(285.5, 194.25)
scale = Vector2(0.313616, 0.360677)
texture = ExtResource("2_at004")

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 68.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ruyt3")

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player" type="Label" parent="PlayerPanel/PlayerData"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_shuwr")
theme_override_font_sizes/font_size = 40
text = "Player"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 161

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData/Player"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 0
offset_left = 166.0
offset_top = 15.0
offset_right = 742.0
offset_bottom = 42.0
theme_override_styles/background = SubResource("StyleBoxFlat_pcitl")
theme_override_styles/fill = SubResource("StyleBoxFlat_vhg2b")
max_value = 390.0
step = 1.0
value = 195.0
show_percentage = false

[node name="label" type="Label" parent="PlayerPanel/PlayerData/Player/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -14.0
offset_right = 2.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 20
text = "HP: 100/200"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingButton" type="Button" parent="PlayerPanel/PlayerData"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_hover_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("4_shuwr")
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = ExtResource("7_fjas0")
theme_override_styles/normal = ExtResource("8_pq12x")
text = "SETTINGS"

[node name="ActionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -575.0
offset_top = 572.0
offset_right = 576.0
offset_bottom = 648.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ruyt3")

[node name="action" type="HBoxContainer" parent="ActionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="ATTACK" type="Button" parent="ActionPanel/action"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("4_shuwr")
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = ExtResource("7_fjas0")
theme_override_styles/normal = ExtResource("8_pq12x")
text = "ATTACK"

[node name="BlankPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.062
offset_left = 25.0
offset_top = 457.0
offset_right = 1102.68
offset_bottom = 537.824
theme_override_styles/panel = SubResource("StyleBoxFlat_veukv")

[node name="Label" type="Label" parent="BlankPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_shuwr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 121.0
offset_right = -20.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i4ikq")

[node name="SETTING" type="Label" parent="SettingPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_shuwr")
theme_override_font_sizes/font_size = 50
text = "SETTING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SettingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 155.0
offset_top = 80.0
offset_right = -126.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="SettingPanel/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Master" type="Label" parent="SettingPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "MASTER"

[node name="MasterSlider" type="HSlider" parent="SettingPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="BGM" type="Label" parent="SettingPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "BGM"

[node name="BGMSlider" type="HSlider" parent="SettingPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SettingPanel"]
volume_db = 3.0

[node name="Back_Button" type="Button" parent="SettingPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -71.0
offset_right = 94.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_hover_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("4_shuwr")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = ExtResource("7_fjas0")
theme_override_styles/normal = ExtResource("8_pq12x")
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3fwpr")
}

[node name="RetryPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 64.0
offset_right = 1108.0
offset_bottom = 602.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mq52o")

[node name="Label" type="Label" parent="RetryPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -34.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_shuwr")
theme_override_font_sizes/font_size = 50
text = "GAME OVER

RETRY?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="RetryPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -75.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.997459, 0.986945)
theme_override_constants/separation = 35

[node name="Yes" type="Button" parent="RetryPanel/HBoxContainer"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("4_shuwr")
theme_override_styles/hover = ExtResource("7_fjas0")
theme_override_styles/normal = ExtResource("8_pq12x")
text = "YES"

[node name="No" type="Button" parent="RetryPanel/HBoxContainer"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("4_shuwr")
theme_override_styles/hover = ExtResource("7_fjas0")
theme_override_styles/normal = ExtResource("8_pq12x")
text = "NO"

[connection signal="pressed" from="PlayerPanel/PlayerData/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="ActionPanel/action/ATTACK" to="." method="_on_serang_pressed"]
[connection signal="value_changed" from="SettingPanel/VBoxContainer/GridContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="SettingPanel/VBoxContainer/GridContainer/BGMSlider" to="." method="_on_bgm_slider_value_changed"]
[connection signal="pressed" from="SettingPanel/Back_Button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="RetryPanel/HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="RetryPanel/HBoxContainer/No" to="." method="_on_no_pressed"]
